--- a/SiteDeJogos/src/estilização/log.css
+++ b/SiteDeJogos/src/estilização/log.css
@@ -1,180 +1,144 @@
+ .segundaTela {
+     width: 100vw;
+     height: 150vh;
+     display: flex;
+     flex-direction: row;
 
-.segundaTela{
-    position: relative;
-    width: 1440px;
-    height: 1024px;
-    
-    background: #FFFFFF;
+ }
+
+ .reg2 {
+     width: 30%;
+     height: 100%;
+     display: flex;
+     flex-direction: column;
+     justify-content: space-between;
+     padding-left: 5%;
+     background-color: #FBF8F4;
+ }
+
+ .login {
+     display: flex;
+     font-family: 'Montserrat';
+     font-style: normal;
+     font-weight: 400;
+     color: #4B626C;
+     font-size: 4rem;
+     justify-content: center;
+     margin: 10%;
+
+ }
+
+ .container-imagem {
+     width: 70%;
+     height: 100%;
+ }
+
+ .container-imagem img {
+     width: 100%;
+     height: 100%;
+ }
+
+ .caixa {
+     width: 80%;
+     height: 5%;
+     background: #EFEFEF;
+     box-shadow: 5px 1rem 20rem rgba(0, 0, 0, 0.25);
+     border-radius: 0.75rem;
+     font-family: 'Montserrat';
+     font-style: normal;
+     font-weight: 300;
+     color: #97A4A2;
+     margin-left: 10%;
+     margin-top: 10%;
+     font-size: 2rem;
+ }
+
+ .setinha{
+    width:10%;
+    height: 5%;
+    margin-left: 85%;
+ }
+
+ .seta2{
+    width: 100%;
+    height: 100%;
+ }
+
+ .seta2 img{
+    width: 100%;
+    height: 100%;
+ }
+
+ .criarConta {
+     margin-top: 45%;
+ }
+
+ .esqueceuSenha {
+     margin-top: 5%;
+ }
+
+ .criarConta,
+ .esqueceuSenha {
+     font-family: 'Montserrat';
+     font-style: normal;
+     font-weight: 500;
+     font-size: 2rem;
+     color: #97A4A2;
+ }
+
+ @media (max-width:1500px) {
+    html {
+        font-size: 80%;
     }
-    
-    .imagem2{
-    position: absolute;
-    width: 1024px;
-    height: 1024px;
-    left: 475px;
-    top: 0px;
-    background: url(../imagens/imagem1.png);
+    .segundaTela{
+        height: 110vh;
+
     }
-    
-    
+}
+@media (max-width:1100px) {
+    html {
+        font-size: 70%;
+    }
+    .segundaTela{
+        height: 90vh;
+
+    }
+}
+@media (max-width:850px) {
+    html {
+        font-size: 60%;
+    }
+    .segundaTela{
+        height: 75vh;
+
+    }
+}
+
+ @media (max-width:768px) {
+     html {
+         font-size: 50%;
+     }
+     .segundaTela{
+        height: 60vh;
+     }
+ }
+
+ @media (max-width:400px){
+    .segundaTela{
+        width: 100vw;
+        height: 100vh;
+        flex-direction: column;
+        flex-direction: column-reverse;
+    } 
     .reg2{
-    position: absolute;
-    width: 475px;
-    height: 1024px;
-    left: 0px;
-    top: 0px;
-    
-    background: #FBF8F4;
+        width:100%;
     }
-    
-    
-    .seta2{
-    
-    box-sizing: border-box;
-    
-    position: absolute;
-    width: 40px;
-    height: 0px;
-    left: 392px;
-    top: 421px;
-    
-    border: 4px solid #4B626C;
+    .container-imagem{
+        width: 100%;
     }
-    
-    
-    .criarConta{
-    position: absolute;
-    width: 260px;
-    height: 76px;
-    left: 56px;
-    top: 850px;
-    
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 24px;
-    line-height: 35px;
-    /* or 146% */
-    
-    color: #97A4A2;
+    .container-imagem img{
+        width: 100%;
+        height: 100%;
     }
-    
-    .esqueceuSenha{
-    position: absolute;
-    width: 260px;
-    height: 76px;
-    left: 56px;
-    top: 904px;
-    
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 24px;
-    line-height: 35px;
-    /* or 146% */
-    
-    color: #97A4A2;
-    }
-    
-    .coluna2{
-    position: absolute;
-    width: 390px;
-    height: 302px;
-    left: 42px;
-    top: 64px;
-    }
-    
-    .email2{
-    position: absolute;
-    width: 390px;
-    height: 50px;
-    left: 42px;
-    top: 204px;
-    
-    /* Rectangle 3 */
-    
-    position: absolute;
-    width: 390px;
-    height: 50px;
-    left: 432px;
-    top: 204px;
-    
-    background: #EFEFEF;
-    box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.25);
-    border-radius: 5px;
-    /*transform: matrix(-1, 0, 0, 1, 0, 0);*/
-    
-    /* E-mail */
-    
-    position: absolute;
-    width: 280px;
-    height: 29px;
-    left: 55px;
-    top: 215px;
-    
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-weight: 300;
-    font-size: 24px;
-    line-height: 29px;
-    
-    color: #97A4A2;
-    }
-    
-    .senha2{
-    
-    position: absolute;
-    width: 390px;
-    height: 50px;
-    left: 42px;
-    top: 316px;
-    
-    /* Rectangle 3 */
-    
-    position: absolute;
-    width: 390px;
-    height: 50px;
-    left: 432px;
-    top: 316px;
-    
-    background: #EFEFEF;
-    box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.25);
-    border-radius: 5px;
-    /*transform: matrix(-1, 0, 0, 1, 0, 0);*/
-    
-    
-    /* Senha */
-    
-    position: absolute;
-    width: 280px;
-    height: 29px;
-    left: 55px;
-    top: 327px;
-    
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-weight: 300;
-    font-size: 24px;
-    line-height: 29px;
-    
-    color: #97A4A2;
-    }
-    
-    
-    .login{
-    
-    position: absolute;
-    width: 182px;
-    height: 78px;
-    left: 146px;
-    top: 64px;
-    
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 64px;
-    line-height: 78px;
-    /* identical to box height */
-    
-    color: #4B626C;
-    }
+   
+ }
