--- a/SiteDeJogos/src/estilização/pop.css
+++ b/SiteDeJogos/src/estilização/pop.css
@@ -1,340 +1,171 @@
-/*tela populares*/
-.terimagem{
 
-    position: absolute;
-    width: 479px;
-    height: 270.84px;
-    left: 134px;
-    top: 913px;
-    
-    background: url(../imagens/ret9.jpg);
-    background-size: cover;
-    }
-  
-  
-  .segimagem{
-  position: absolute;
-  width: 479px;
-  height: 283.15px;
-  left: 852px;
-  top: 567px;
-  
-  background: url(../imagens/Ret10.jpg);
-  background-size: cover;
+  .sessao-branca-populares{
+    height: 135vh;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    background-color: #FBF8F4;
   }
-  
-  .pop{
-  
-  position: absolute;
-  width: 190px;
-  height: 44px;
-  left: 109px;
-  top: 132px;
-  
+
+.pop{
+  margin:  2%;
   font-family: 'Montserrat';
   font-style: normal;
   font-weight: 700;
-  font-size: 36px;
-  line-height: 44px;
-  /* identical to box height */
-  
   color: #4B626C;
+  font-size: 4rem;
+}
+
+.container-imagemp{
+  width:35%;
+  height: 85%;
+}
+
+.container-imagemp img{
+  height: 100%;
+  width:100%;
+  margin: 2%;
+}
+
+  .jogo{
+    display: flex;
+    width: 85%;
+    height: 30%;
+    margin: auto;
+
   }
-  
-  
-  .priimagem{
-  position: absolute;
-  width: 479px;
-  height: 282px;
-  left: 134px;
-  top: 223px;
-  
-  background: url(../imagens/Ret11.jpg);
-  background-size: cover;
+
+  .bolinhas{
+    width: 5%;
+    height: 22%;
+    background-color: #4B626C;
+    border-radius: 100%;
   }
-  
-  .circle1{
-  position: absolute;
-  width: 50px;
-  height: 50px;
-  left: 109.01px;
-  top: 205px;
-  
-  background: #4B626C;
-  transform: rotate(0.01deg);
-  border-radius: 100%;
+
+  .numbers{
+    color: white;
+    font-size: 2.5rem;
+    font-weight: 700;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 0.8rem;
   }
-  
-  .um{
-  position: absolute;
-  width: 50px;
-  height: 50px;
-  left: 109.01px;
-  top: 195px;
-  
-  font-family: 'Montserrat';
-  font-style: normal;
-  font-weight: 600;
-  font-size: 24px;
-  line-height: 29px;
+
+  .titulo-texto{
+    width: 57%;
+    color: #4B626C;
+    font-family: 'Montserrat';
+    font-style: normal;
+    margin-left: 5%;
+  }
+
+  .title{
+    display: flex;
+    justify-content: center;
+    font-weight: 900;
+    font-size: 3rem;
+    padding-top: 1rem;
+  }
+
+  .paragrafos{
+    display: flex;
+    justify-content: center;
+    font-weight: 300;
+    font-size: 1.7rem;
+  }
+
+  .jogo:nth-child(3){
+    flex-direction: row-reverse;
+  }
+ 
+
+  .carrinho{
+    height:10vh;
+    width: 100vw;
+    background-color: #FBF8F4;
+  }
+
+  .circle{
+    width:4.5%;
+    height:98%;
+    background: #4B626C;
+    border-radius: 100%;
+    margin-left: 90%;
+  }
+/*
+  @media (max-width:1620px) {
+    html{
+      font-size: 80%;
+    }
+    .sessao-branca-populares{
+      height: 100vh;
+    }
+    .carrinho{
+      height: 8vh;
+    }
+  }
+
+  @media (max-width:1000px) {
+    html{
+      font-size: 70%;
+    }
+    .sessao-branca-populares{
+      height: 60vh;
+    }
+    .carrinho{
+      height: 6vh;
+    }
+  }
+
+  @media (max-width:768px) {
+    html{
+      font-size: 60%;
+    }
+    .sessao-branca-populares{
+      height: 60vh;
+    }
+    .carrinho{
+      height: 4vh;
+    }
+    .telaPop{
+      height: 99vh;
+    }
+  }
+*/
+@media (max-width:400px) {
+  html{
+    font-size: 115%;
+  }
+  .sessao-branca-populares{
+    height: 200vh;
+  }
+ .jogo{
   display: flex;
-  justify-content: center;
-  text-align: center;
-  
-  color: #FBF6F0;
-  
-  transform: rotate(0.01deg);
-  }
-  
-  .god{
-  position: absolute;
-  width: 186px;
-  height: 39px;
-  left: 907px;
-  top: 246px;
-  
-  font-family: 'Montserrat';
-  font-style: normal;
-  font-weight: 600;
-  font-size: 32px;
-  line-height: 39px;
-  /* identical to box height */
-  
-  color: #4B626C;
-  }
-  
-  
-  .pgod{
-  position: absolute;
-  width: 663px;
-  height: 216px;
-  left: 668px;
-  top: 285px;
-  
-  font-family: 'Montserrat';
-  font-style: normal;
-  font-weight: 300;
-  font-size: 20px;
-  line-height: 24px;
-  display: flex;
-  align-items: center;
-  text-align: justify;
-  
-  color: #4B626C;
-  }
-  
-  .circle2{
-  position: absolute;
-  width: 50px;
-  height: 50px;
-  left: 827.01px;
-  top: 550px;
-  
-  background: #4B626C;
-  transform: rotate(0.01deg);
-  border-radius: 100%;
-  }
-  
-  .dois{
-  position: absolute;
-  width: 50px;
-  height: 50px;
-  left: 827.01px;
-  top: 540px;
-  
-  font-family: 'Montserrat';
-  font-style: normal;
-  font-weight: 600;
-  font-size: 24px;
-  line-height: 29px;
-  display: flex;
-  justify-content: center;
-  text-align: center;
-  
-  color: #FBF6F0;
-  
-  transform: rotate(0.01deg);
-  }
-  
-  .circle3{
-  position: absolute;
-  width: 50px;
-  height: 50px;
-  left: 109.01px;
-  top: 897px;
-  
-  background: #4B626C;
-  transform: rotate(0.01deg);
-  border-radius: 100%;
-  }
-  
-  .tres{
-  position: absolute;
-  width: 50px;
-  height: 50px;
-  left: 109.01px;
-  top: 887px;
-  
-  font-family: 'Montserrat';
-  font-style: normal;
-  font-weight: 600;
-  font-size: 24px;
-  line-height: 29px;
-  display: flex;
-  justify-content: center;
-  text-align: center;
-  
-  
-  color: #FBF6F0;
-  
-  transform: rotate(0.01deg);
-  
-  
-  }
-  
-  .horizon{
-  position: absolute;
-  width: 318px;
-  height: 39px;
-  left: 299px;
-  top: 593px;
-  
-  font-family: 'Montserrat';
-  font-style: normal;
-  font-weight: 600;
-  font-size: 32px;
-  line-height: 39px;
-  /* identical to box height */
-  
-  color: #4B626C;
-  }
-  
-  
-  .phorizon{
-  position: absolute;
-  width: 648px;
-  height: 168px;
-  left: 134px;
-  top: 632px;
-  
-  font-family: 'Montserrat';
-  font-style: normal;
-  font-weight: 300;
-  font-size: 20px;
-  line-height: 24px;
-  display: flex;
-  align-items: center;
-  text-align: justify;
-  
-  color: #4B626C;
-  }
-  
-  
-  .days{
-  
-  position: absolute;
-  width: 177px;
-  height: 39px;
-  left: 911px;
-  top: 920px;
-  
-  font-family: 'Montserrat';
-  font-style: normal;
-  font-weight: 600;
-  font-size: 32px;
-  line-height: 39px;
-  /* identical to box height */
-  
-  color: #4B626C;
-  }
-  
-  
-  .pdays{
-  position: absolute;
-  width: 663px;
-  height: 216px;
-  left: 668px;
-  top: 959px;
-  
-  font-family: 'Montserrat';
-  font-style: normal;
-  font-weight: 300;
-  font-size: 20px;
-  line-height: 24px;
-  display: flex;
-  align-items: center;
-  text-align: justify;
-  
-  color: #4B626C;
-  }
-  
-  
-  .carrinhp{
-  position: absolute;
-  width: 75px;
-  height: 75px;
-  left: 1324px;
-  top: 1195px;
-  }
-  
-  .circleCarrinho{
-  box-sizing: border-box;
-  
-  position: absolute;
-  width: 75px;
-  height: 75px;
-  left: 1324px;
-  top: 1195px;
-  
-  background: #4B626C;
-  border: 2px solid #FFFFFF;
-  border-radius: 100%;
-  }
-  
-  .shopping-cart{
-  position: absolute;
-  width: 41px;
-  height: 41px;
-  left: 1341px;
-  top: 1212px;
-  }
-  
-  .goup{
-  position: absolute;
-  left: 0%;
-  right: 0%;
-  top: 8.55%;
-  bottom: 8.55%;
-  }
-  
-  
- .goup2{
-  
-  position: absolute;
-  left: 0%;
-  right: 0%;
-  top: 8.55%;
-  bottom: 8.55%;
+  flex-direction: column;
  }
-  
-  
-  .imgcarro{
-  position: absolute;
-  left: 0%;
-  right: 0%;
-  top: 8.55%;
-  bottom: 36%;
-  
-  background-image: url(../imagens/carrinho.png);
-  background-size: cover;
-  }
-  
-  /* Vector 
-  
-  position: absolute;
-  left: 6.64%;
-  right: 23.89%;
-  top: 67.36%;
-  bottom: 8.55%;
-  
-  background: #FFFFFF;*/
+ .jogo:nth-child(3){
+  flex-direction: column;
+}
+.titulo-texto{
+  width: 98%;
+}
+.container-imagemp{
+  width: 90%;
+  margin-left: 5%;
+}
+.bolinhas{
+  height: 25%;
+  width: 11%;
+}
+.circle{
+  margin-left: 80%;
+  width: 13%;
+  height: 81%;
+}
+
+.bolinhas:nth-child(3){
+  display: none;
+}
+}
